fixed menu z-index

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -127,3 +127,7 @@ table td {
   padding-right: 5px;
   color: #111;
 }
+
+nav.site-nav {
+  z-index: 100;
+}
